Clean up sprite details and atlas details screens slightly Only display mip level for mipped atlases Add GUI sprite scaling info if applicable